<?xml version="1.0"?>
<package format="2">
  <name>pdk_ros</name>
  <version>0.0.1</version>
  <description>ROS Package to import PDK to ROS</description>
  <maintainer email="silascorreia.lobo@carissma.eu">Silas Lobo</maintainer>
  <license>BSD 3-clause</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pdk_ros_msg</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pdk_ros_msg</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pdk_ros_msg</exec_depend>
</package>